--- a/src/components/Gallery/CipherGallery.css
+++ b/src/components/Gallery/CipherGallery.css
@@ -6,11 +6,12 @@
 
 .card {
     text-decoration: none;
-    transition: box-shadow 0.3s;
+    transition: box-shadow 0.3s, border 0.3s;
 }
 
 .card:hover {
-    box-shadow: 0px 0px 10px brown;
+    box-shadow: 0px 0px 10px tan;
+    border: 1px solid sienna;
 }
 
 .cardImage {
