--- a/src/index.css
+++ b/src/index.css
@@ -18,11 +18,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #646CFF;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #535BF2;
 }
 
 body {
@@ -64,12 +64,12 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #1A1A1A;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #646CFF;
 }
 button:focus,
 button:focus-visible {
@@ -79,12 +79,12 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
   }
   a:hover {
-    color: #747bff;
+    color: #747BFF;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #F9F9F9;
   }
 }
