--- a/src/components/CipherAtbash/Atbash.css
+++ b/src/components/CipherAtbash/Atbash.css
@@ -55,6 +55,10 @@
     margin-top: 10px;
 }
 
+.helperButton {
+    margin-top: 30px;
+}
+
 ol, ul, li {
     font-family: var(--body-font);
     font-weight: var(--font-weight-regular);
@@ -71,9 +75,18 @@ td {
     .alphabetTable {
         width: auto;
     }
+
     .smallInput {
         width: 30px;
         height: 35px;
         margin: 2px;
+    }
+
+    .keyBox {
+        margin-bottom: 20px !important;
+    }
+
+    .helperButton {
+        margin-top: 10px;
     }
 }
