--- a/src/components/CipherCaesar/Caesar.css
+++ b/src/components/CipherCaesar/Caesar.css
@@ -1,3 +1,11 @@
+.sliderContainer {
+    display: flex;
+    max-width: 100%;
+    margin: 40px 0px 30px 0px;
+    justify-content: center;
+    align-items: center;
+}
+
 .slider {
     height: 5px;
     width: 300px;
@@ -6,7 +14,7 @@
 }
 
 .sliderLabel {
-    margin-right: 30px;
+    margin-right: 20px;
     font-family: var(--body-font);
     font-weight: var(--font-weight-regular);
 }
@@ -27,7 +35,7 @@
 }
 
 .slider .MuiSlider-markLabel {
-    width: 30;
+    width: 30px;
     font-family: monospace;
     white-space: pre-wrap;
 }
@@ -38,4 +46,11 @@
     font-size: 16px;
     text-transform: none;
     margin: 10px;
+}
+
+@media screen and (max-width: 600px) {
+    .sliderContainer {
+        padding-left: 0px;
+        padding-right: 20px;
+    }
 }
