--- a/src/components/CipherVigenere/Vigenere.css
+++ b/src/components/CipherVigenere/Vigenere.css
@@ -1,16 +1,5 @@
-.keywordBoxLabel {
-    font-family: var(--body-font);
-    font-weight: var(--font-weight-regular);
-}
-
-.keywordBox {
+.keyBox {
     margin: 0px 10px;
-    border: 1px solid;
-    border-radius: 5px;
-    font-family: var(--body-font);
-    font-weight: var(--font-weight-regular);
-    width: 300px;
-    padding-left: 5px;
 }
 
 .vigenereSquare {
@@ -28,7 +17,7 @@
 }
 
 @media screen and (max-width: 800px) {
-    .keywordBox {
+    .keyBox {
         width: 200px;
     }
 
@@ -44,8 +33,14 @@
 }
 
 @media screen and (max-width: 600px) {
-    .keywordBox {
+    .keyBox {
         width: 260px;
-        margin-bottom: 20px;
+        margin-bottom: 20px !important;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    .vigenereSquare {
+        opacity: 0.8;
     }
 }
