--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,25 @@
 :root {
-  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: white;
+  background-color: #2A2A2A;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
   --header-font: "Spectral SC", serif;
   --body-font: "Open Sans", sans-serif;
   --font-weight-regular: 400;
-}
+  --font-weight-bold: 500;
 
-a {
-  font-weight: 500;
-  color: #646CFF;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535BF2;
+  --dark-mode-primary: #121212;
+  --dark-mode-secondary: #575757;
+  --dark-mode-white: #E6E6E6;
+
 }
 
 body {
@@ -31,23 +28,32 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: blanchedalmond !important;
-  
+  background-color: blanchedalmond;
+}
+
+a {
+  font-weight: 500;
+  color: #646CFF;
+  text-decoration: inherit;
+}
+
+a:hover {
+  color: #535BF2;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: calc(1.375rem + 1.5vw);
   line-height: 1.1;
   font-family: var(--header-font);
-  font-weight: var(--font-weight-regular);
+  font-weight: var(--font-weight-bold);
   font-style: normal;
-  margin-top: 0.5em !important;
+  margin-top: 0.5em;
 }
 
 h2, h3 {
   font-family: var(--header-font);
-  font-weight: var(--font-weight-regular);
-  margin-top: 2rem !important;
+  font-weight: var(--font-weight-bold);
+  margin-top: 2rem;
 }
 
 p {
@@ -78,13 +84,24 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #FFFFFF;
+    color: black;
+    background-color: blanchedalmond;
   }
   a:hover {
     color: #747BFF;
   }
   button {
     background-color: #F9F9F9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    color: var(--dark-mode-white);
+    background-color: var(--dark-mode-primary);
+  }
+
+  h2, h3 {
+    color: burlywood;
   }
 }
