--- a/src/App.css
+++ b/src/App.css
@@ -52,11 +52,6 @@
   font-size: 18px;
 }
 
-.keyBoxLabel {
-  font-family: var(--body-font);
-  font-weight: var(--font-weight-regular);
-}
-
 .keyBox {
   border: 1px solid;
   border-radius: 5px;
@@ -64,6 +59,16 @@
   font-weight: var(--font-weight-regular);
   width: 300px;
   padding-left: 5px;
+  margin: 0px 10px;
+}
+
+.keyBoxLabel {
+  font-family: var(--body-font);
+  font-weight: var(--font-weight-regular);
+}
+
+.keyBoxLabel:hover {
+  cursor: pointer;
 }
 
 .learningButton {
