--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,8 @@
   font-family: var(--body-font);
   font-weight: var(--font-weight-regular);
   font-size: 18px;
+  background-color: white;
+  color: black;
 }
 
 .keyBox {
@@ -60,6 +62,8 @@
   width: 300px;
   padding-left: 5px;
   margin: 0px 10px;
+  background-color: white;
+  color: black;
 }
 
 .keyBoxLabel {
@@ -125,7 +129,7 @@ a:hover {
   }
 }
 
-@media (prefers-color-scheme: dark) {
+body.dark {
   .header, .footer {
     background-color: var(--dark-mode-secondary);
   }
@@ -151,6 +155,7 @@ a:hover {
 
   .textBox {
     background-color: #2A2A2A;
+    color: var(--dark-mode-white);
   }
 
   .textBox::placeholder {
@@ -160,6 +165,7 @@ a:hover {
 
   .keyBox {
     background-color: #2A2A2A;
+    color: var(--dark-mode-white);
   }
 
   .keyBox::placeholder {
