--- a/src/components/CipherA1Z26/A1Z26.css
+++ b/src/components/CipherA1Z26/A1Z26.css
@@ -35,7 +35,7 @@
    }
 }
 
-@media (prefers-color-scheme: dark) {
+body.dark {
    .azTable td {
       color: var(--dark-mode-white);
       background-color: var(--dark-mode-primary);
