--- a/src/components/Gallery/CipherGallery.css
+++ b/src/components/Gallery/CipherGallery.css
@@ -35,7 +35,7 @@
     }
 }
 
-@media (prefers-color-scheme: dark) {
+body.dark {
     .card {
         background-color: var(--dark-mode-secondary);
         border-color: #3F3F3F;
