--- a/src/components/CipherPlayfair/Playfair.css
+++ b/src/components/CipherPlayfair/Playfair.css
@@ -18,6 +18,18 @@
    }
 }
 
+.textAfterImage {
+    margin-top: 1rem;
+}
+
+.playfairGrids {
+    width: 100%;
+}
+
+.playfairRules {
+    width: 90%;
+}
+
 @media screen and (max-width: 600px) {
    .optionContainer {
       width: 80%;
@@ -49,5 +61,9 @@ body.dark {
 
    .completeKey::placeholder {
       color: black;
+   }
+
+   .playfairGrids, .playfairRules {
+      opacity: 0.8;
    }
 }
