--- a/src/components/CipherBase64/Base64.css
+++ b/src/components/CipherBase64/Base64.css
@@ -10,6 +10,8 @@
    margin-left: 50px;
    margin-bottom: 20px;
    clear: right;
+   font-family: var(--body-font);
+   font-weight: var(--font-weight-regular);
 }
 
 .binary {
