--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --header-font: "Spectral SC", serif;
-  --body-font: "Open Sans", sans-serif;
-  --font-weight-regular: 400;
+  --header-font: "Spectral", serif;
+  --body-font: "Lexend", sans-serif;
+  --font-weight-regular: 300;
   --font-weight-bold: 500;
 
   --light-color: black;
@@ -37,39 +37,49 @@ body {
   color: var(--dark-mode-white);
   background-color: var(--dark-mode-primary);
 
-  h1, h2, h3 {
+  h1, h2 {
     color: burlywood;
   }
 }
 
 a {
-  font-weight: 500;
-  color: #646CFF;
+  color: royalblue;
+  font-weight: var(--font-weight-bold);
   text-decoration: inherit;
 }
 
 a:hover {
-  color: #535BF2;
+  color: darkblue;
 }
 
 h1 {
-  font-size: calc(1.375rem + 1.5vw);
-  line-height: 1.1;
+  
   font-family: var(--header-font);
   font-weight: var(--font-weight-bold);
-  font-style: normal;
+  font-size: calc(1.375rem + 1.5vw);
+  line-height: 1.1;
   margin-top: 0.5em;
 }
 
-h2, h3 {
+h2 {
   font-family: var(--header-font);
   font-weight: var(--font-weight-bold);
+  font-size: 1.75rem;
   margin-top: 2rem;
 }
 
 p {
   font-family: var(--body-font);
-  font-optical-sizing: auto;
   font-weight: var(--font-weight-regular);
-  font-style: normal;
+  font-size: 1rem;
+  font-optical-sizing: auto;  
+}
+
+ol, ul, li {
+  font-family: var(--body-font);
+  font-weight: var(--font-weight-regular);
+}
+
+b {
+  font-weight: 600;
 }
