Adjust UI elements to improve accessibility
 - Change color of links to improve contrast

 - Add tabIndex for overflowing info tables

 - Change font for Base64 encoding labels

 - Fix appearance and focus issue on Caesar slider

 - Adjust aria labels for Playfair letter options

--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,10 @@ body.dark {
     color: var(--dark-mode-primary);
   }
 
+  a {
+    color: #4B77FB;
+  }
+
   a:hover {
     color: lightskyblue;
   }
