--- a/src/components/CipherAtbash/Atbash.css
+++ b/src/components/CipherAtbash/Atbash.css
@@ -1,8 +1,6 @@
 .tableDiv {
     overflow-x: auto;
-    width: 80%;
-    justify-self: center;
-    margin: 25px 0px;
+    margin: 25px 8vw;
 }
 
 .alphabetTable {
@@ -32,7 +30,7 @@
 }
 
 th {
-    padding-right: 20px;
+    padding-right: 10px;
     font-family: var(--body-font);
     font-weight: var(--font-weight-bold);
 }
@@ -50,12 +48,6 @@ td {
         width: 30px;
         height: 35px;
         margin: 2px;
-    }
-}
-
-@media screen and (max-width: 700px) {
-    .keyBox {
-        margin-bottom: 20px;
     }
 }
 
